--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -18,22 +18,23 @@
             <div class='row'>
               <div class='col-sm-4 col-sm-offset-4'>
                 <h1 class='text-center title'>Sign up</h1>
-                <form action="/signup" method="post" target="_self">
+                  <p class="text-danger" ng-show="errorMsg">{{ errorMsg }}</p>
+                <form ng-submit="signupUser()">
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
-                      <input value="" placeholder="E-mail" class="form-control" name="email" type="text" />
+                      <input ng-model="email" placeholder="E-mail" class="form-control" type="email" />
                       <i class='icon-user text-muted'></i>
                     </div>
                   </div>
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
-                      <input value="" placeholder="Password" class="form-control" name="password" type="password" />
+                      <input ng-model="password" placeholder="Password" class="form-control" type="password" />
                       <i class='icon-lock text-muted'></i>
                     </div>
                   </div>
                   <div class='form-group'>
                     <div class='controls with-icon-over-input'>
-                      <input value="" placeholder="Password confirmation" class="form-control" name="password_confirmation" type="password" />
+                      <input ng-model="password_confirmation" placeholder="Password confirmation" class="form-control" type="password" />
                       <i class='icon-lock text-muted'></i>
                     </div>
                   </div>
