Fix loading spinner on designer

--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -41,7 +41,11 @@
             <div class="palette-search" id="palette-search">
                 <i class="fa fa-search"></i><input id="palette-search-input" type="text" placeholder="filter"><a href id="palette-search-clear"><i class="fa fa-remove"></i></a></input>
             </div>
-            <i class="palette-spinner fa fa-spin fa-refresh fa-2x"></i>
+
+            <div class="text-center">
+                <i class="palette-spinner fa fa-spin fa-refresh fa-2x"></i>
+            </div>
+
             <div class="palette-scroll">
                 <div class="palette-category">
                     <div class="palette-header"><i class="expanded fa fa-chevron-down"></i><span>skynet</span></div>
