--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -116,15 +116,15 @@
                 <a class="btn btn-small" href><i class="fa fa-search-plus"></i></a>
             </div>
         </div>
-    </div>
-
-    <div id="chart-zoom-controls">
-        <div class="btn-group">
-            <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
-            <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
-            <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
+        <div class="chart-zoom-controls" id="chart-zoom-controls">
+            <div class="btn-group">
+                <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
+            </div>
         </div>
     </div>
+
 
     <div id="sidebar">
         <ul class="red-tabs" id="sidebar-tabs"></ul>
