--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -108,6 +108,13 @@
             <ul class="red-tabs" id="workspace-tabs"></ul>
             <div class="red-add-tab"><a id="btn-workspace-add-tab" href><i class="fa fa-plus"></i></a></div>
         </div>
+        <div class="chart-zoom-controls" id="chart-zoom-controls">
+            <div class="btn-group">
+                <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
+            </div>
+        </div>
         <div id="chart"></div>
         <div id="workspace-toolbar">
             <div class="btn-group">
@@ -116,23 +123,15 @@
                 <a class="btn btn-small" href><i class="fa fa-search-plus"></i></a>
             </div>
         </div>
-        <div class="chart-zoom-controls" id="chart-zoom-controls">
-            <div class="btn-group">
-                <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
-            </div>
-        </div>
     </div>
 
 
-    <div id="sidebar">
+    <div id="sidebar" class="sidebar">
         <ul class="red-tabs" id="sidebar-tabs"></ul>
         <div id="sidebar-content"></div>
     </div>
 
     <div id="sidebar-separator"></div>
-
 </div>
 
 <div id="notifications"></div>
