finished outer frame of the designer, as well as the workspace.

--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div id="main-container" class="sidebar-closed">
+<div id="main-container" class="main-container sidebar-closed">
     <div id="palette" class="palette">
         <div class="palette-search" id="palette-search">
             <i class="fa fa-search"></i><input id="palette-search-input" type="text" placeholder="filter"><a href
