Include node definitions statically so that we can modify them

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
 <!-- Designer Dependencies -->
 <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/assets/design/ba-tiny-pubsub.js"></script>
-<script src="/assets/design/orion/built-editor.min.js"></script>
+<!--<script src="/assets/design/orion/built-editor.min.js"></script>-->
 <script src="/assets/design/d3.v3.min.js"></script>
 <script src="/assets/design/red/main.js"></script>
 <script src="/assets/design/red/ui/state.js"></script>
