--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -285,7 +285,7 @@
     </form>
 </div>
 {{nodeTemplateLocation}}
-<div id="random_html" ng-include="nodeTemplateLocation"></div>
+<div id="node-red-templates"  ng-include="nodeTemplateLocation"></div>
 <script type="text/x-red" data-template-name="export-clipboard-dialog">
         <div class="form-row">
             <label for="node-input-export" style="display: block; width:100%;"><i class="fa fa-share"></i> Nodes:</label>
