--- a/public/assets/design/red/ui/random_html.html
+++ b/public/assets/design/red/ui/random_html.html
@@ -579,7 +579,7 @@ RED.nodes.registerType('inject',{
         var toolbar = '' +
             '<div id="debug-toolbar">' +
                 '<h4>' +
-                '<a id="debug-tab-clear" title="Clear Log" class="btn btn-danger btn-mini btn-block" href>' +
+                '<a id="debug-tab-clear" title="Clear Log" class="btn btn-default btn-mini btn-block" href>' +
                     '<i class="fa fa-trash-o"></i> Clear Log' +
                 '</a>' +
                 '</h4>' +
