--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -126,11 +126,13 @@
     </div>
 
 
-    <div id="sidebar" class="sidebar">
+    <div id="sidebar" class="edit-panel">
+
         <div class="node-editor" ng-hide="!editingNode">
+            <h3 class="node-editor-header" >Editing {{editingNode.name || type}}</h3>
             <schema-editor control="schemaControl"
                            model="editingNode.properties" allow-json-edit="true" additional-properties="true" schema="editingNode._def.schema"></schema-editor>
-            <button ng-click="saveNodeProperties()" class="btn btn-lg btn-success">Save</button>
+            <button ng-click="updateNodeProperties()" class="btn btn-lg btn-primary save">Update Node</button>
         </div>
     </div>
 
