--- a/public/assets/design/red/ui/random_html.html
+++ b/public/assets/design/red/ui/random_html.html
@@ -35,7 +35,7 @@
         category: 'analysis-function',
         color:"#E6E0F8",
         defaults: {
-            name: {value:""},
+            name: {value:""}
         },
         inputs:1,
         outputs:1,
@@ -985,12 +985,10 @@ return msg;"},
             type: "object",
             properties: {
                 phoneNumber: {
-                    type: "string",
-                    required: true
+                    type: "string"
                 },
                 plivoAuthId: {
-                    type: "string",
-                    required: true
+                    type: "string"
                 },
                 plivoAuthToken: {
                     type: "string",
