Fixing styling for name node in design.less

--- a/public/assets/design/red/ui/designer-node-templates.html
+++ b/public/assets/design/red/ui/designer-node-templates.html
@@ -979,7 +979,7 @@ return msg;"},
 <!-- Finally, the node type is registered along with all of its properties   -->
 <script type="text/javascript">
     RED.nodes.registerType('delay',{
-        category: 'function',      // the palette category
+        category: 'function',
         color:"#E6E0F8",
         schema : {
             type: "object",
