--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -132,10 +132,10 @@
 
         <div class="node-editor" ng-hide="!editingNode">
             <h3 class="node-editor-header" >
-                <input placeholder="Name" type="text" class="form-control" ng-model="editingNode.name">
+                <input placeholder="Name" type="text" class="form-control" ng-model="editingNodeName">
             </h3>
             <schema-editor control="schemaControl"
-                           model="editingNode.properties" allow-json-edit="true" additional-properties="true" schema="editingNode._def.schema"></schema-editor>
+                           model="editingNode" allow-json-edit="true" additional-properties="true" schema="editingNodeSchema"></schema-editor>
             <button ng-click="updateNodeProperties()" class="btn btn-lg btn-primary save">Update Node</button>
         </div>
     </div>
