--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -16,7 +16,7 @@ COMMENTED OUT FOR WHITESPACE
     </h1>
 
 	<tabset>
-	<tab heading="Quick Hits">
+	<tab heading="Overview">
 	<div class="container-fluid">
         <div class="row">
             <div class="form-group col-md-12">
@@ -51,84 +51,6 @@ COMMENTED OUT FOR WHITESPACE
                 </div></div>
             </div>
         </div></div>
-	</tab>
-	<tab heading="Freeform">
-	<div class="container-fluid">
-        <div class="row panel">
-            <div class="input-group">
-                <form class="form-inline col-md-16">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" ng-model="forms.FF_searchText" placeholder="Search" autofocus/>
-                    </div>
-                    <div class="col-md-4">
-                        <select class="form-control" ng-model="forms.FF_eventCode">
-                            <option value="">All Event Codes</option>
-                            <option ng-repeat="event in events" value="{{event.code}}">{{event.name}} ({{event.code}})</option>
-                        </select>
-
-                    </div>
-                    <div class="col-md-2">
-                      <span class="input-group-btn">
-                          <button class="btn btn-default" type="button" ng-click="search()">
-                              <span class="fa fa-search"> Find</span>
-                          </button>
-                      </span>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-    <div class="panel panel-primary" ng-show="results">
-	<div ng-switch="results.hits.total > 999 ? 'true' : 'false'">
-		<div ng-switch-when="true"><div class="alert alert-success" role="alert">Total Hits are more than 1000. Only showing first 1000 results.</div></div>
-		<div ng-switch-default></div>
-	</div>
-        <!-- Default panel contents -->
-        <div class="panel-heading">Results
-            <p class="panel-title pull-right"> hits: {{ results.hits.total }}</p>
-        </div>
-        <div class="panel-body">
-	    <div ng-switch="!!results.hits.total ? 1 : 0">
-                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
-		<div ng-switch-default>
-            <table class="table table-striped table-condensed table-hover">
-                <thead><tr><th ng-repeat="header in freeform_results_ngTable.headers" class="{{header.name}}" custom-sort order="header.name" sort="sort">
-                    <a ng-click="sort_by(order)" style="color: #555;"><i ng-class="selectedCls(order)">{{header.name}}</i></a></th></tr></thead>
-                <tfoot>
-                <td colspan="{{freeform_results_ngTable.headers.length}}">
-                    <div class="col-lg-24">
-			<ul class="pagination">
-  				<li ng-class="{disabled: currentPage == 0}" ng-click="prevPage()"><a href="/analyze#" >Previous</a></li>
-				<li ><span class="label label-info">{{currentPage + 1}}</span></li>
-  				<li  ng-class="{disabled: (currentPage) == freeform_results_ngTable.pagedItems.length - 1}" ng-click="nextPage()"><a href="/analyze#" >Next</a></li>
-			</ul>
-                        <!--<ul class="pagination">
-                            <li ng-class="{disabled: currentPage == 0}">
-                                <a href="/analyze#" ng-click="prevPage()">« Prev</a>
-                            </li>
-
-                            <li ng-repeat="n in range(freeform_results_ngTable.pagedItems.length, 0, results.hits.total / ff.maxSize, 1)"
-                                ng-class="{active: n == currentPage}" >
-                                <span ng-bind="n + 1">1</span>
-                            </li>
-
-                            <li ng-class="{disabled: (currentPage) == freeform_results_ngTable.pagedItems.length - 1}">
-                                <a href="/analyze#" ng-click="nextPage()">Next »</a>
-                            </li>
-                        </ul>-->
-                    </div>
-                </td>
-                </tfoot>
-                <tbody>
-                <tr ng-repeat="item in freeform_results_ngTable.pagedItems[currentPage] | orderBy:sort.sortingOrder:sort.reverse">
-                    <!--<td ng-repeat="val in item" ng-bind-html-unsafe="item._source[freeform_results_ngTable.headers[$index].name]"></td>-->
-                    <td ng-repeat="header in freeform_results_ngTable.headers">{{ item._source[header.name] | freeFormDisplayText  }}</td>
-                </tr>
-                </tbody>
-            </table>
-	</div></div><!-- end ng switch -->
-        </div>
-    </div></div>
 	</tab>
 <tab heading="Explore">
     <div class="container-fluid">
@@ -254,6 +176,70 @@ COMMENTED OUT FOR WHITESPACE
         </div><!-- END OF GRAPH ROW -->
     </div>
 </tab>
+	<tab heading="Search">
+	<div class="container-fluid">
+        <div class="row panel">
+            <div class="input-group">
+                <form class="form-inline col-md-16">
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" ng-model="forms.FF_searchText" placeholder="Search" autofocus/>
+                    </div>
+                    <div class="col-md-4">
+                        <select class="form-control" ng-model="forms.FF_eventCode">
+                            <option value="">All Event Codes</option>
+                            <option ng-repeat="event in events" value="{{event.code}}">{{event.name}} ({{event.code}})</option>
+                        </select>
+
+                    </div>
+                    <div class="col-md-2">
+                      <span class="input-group-btn">
+                          <button class="btn btn-default" type="button" ng-click="search()">
+                              <span class="fa fa-search"> Find</span>
+                          </button>
+                      </span>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    <div class="panel panel-primary" ng-show="results">
+	<div ng-switch="results.hits.total > 999 ? 'true' : 'false'">
+		<div ng-switch-when="true"><div class="alert alert-success" role="alert">Total Hits are more than 1000. Only showing first 1000 results.</div></div>
+		<div ng-switch-default></div>
+	</div>
+        <!-- Default panel contents -->
+        <div class="panel-heading">Results
+            <p class="panel-title pull-right"> hits: {{ results.hits.total }}</p>
+        </div>
+        <div class="panel-body">
+	    <div ng-switch="!!results.hits.total ? 1 : 0">
+                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+		<div ng-switch-default>
+            <table class="table table-striped table-condensed table-hover">
+                <thead><tr><th ng-repeat="header in freeform_results_ngTable.headers" class="{{header.name}}" custom-sort order="header.name" sort="sort">
+                    <a ng-click="sort_by(order)" style="color: #555;"><i ng-class="selectedCls(order)">{{header.name}}</i></a></th></tr></thead>
+                <tfoot>
+                <td colspan="{{freeform_results_ngTable.headers.length}}">
+                    <div class="col-lg-24">
+			<ul class="pagination">
+  				<li ng-class="{disabled: currentPage == 0}" ng-click="prevPage()"><a href="/analyze#" >Previous</a></li>
+				<li ><span class="label label-info">{{currentPage + 1}}</span></li>
+  				<li  ng-class="{disabled: (currentPage) == freeform_results_ngTable.pagedItems.length - 1}" ng-click="nextPage()"><a href="/analyze#" >Next</a></li>
+			</ul>
+                    </div>
+                </td>
+                </tfoot>
+                <tbody>
+                <tr ng-repeat="item in freeform_results_ngTable.pagedItems[currentPage] | orderBy:sort.sortingOrder:sort.reverse">
+                    <!--<td ng-repeat="val in item" ng-bind-html-unsafe="item._source[freeform_results_ngTable.headers[$index].name]"></td>-->
+                    <td ng-repeat="header in freeform_results_ngTable.headers">{{ item._source[header.name] | freeFormDisplayText  }}</td>
+                </tr>
+                </tbody>
+            </table>
+	</div></div><!-- end ng switch -->
+        </div>
+    </div></div>
+ </tab>
 </tabset>
 
 </div>
