Add save and deploy method

--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -34,7 +34,7 @@
         <button ng-click="save()" class="btn btn-lg btn-default">
             <i class="fa fa-floppy-o"></i> Save
         </button>
-        <button ng-click="deploy()" id="btn-deploy" class="btn btn-lg btn-default btn-deploy disabled">
+        <button ng-click="deploy()" id="btn-deploy" class="btn btn-lg btn-default btn-deploy">
             <i class="fa fa-upload"></i> Deploy
         </button>
     </div>
