--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -41,7 +41,7 @@
 </div>
 
 <div id="main-container" class="main-container sidebar-closed">
-    <palette></palette>
+    <palette flow-node-types="flowNodeTypes"></palette>
     <!-- /palette -->
 
     <div id="workspace" class="workspace">
