getting node types using a "service"

--- a/public/angular/directives/design/palette/palette.html
+++ b/public/angular/directives/design/palette/palette.html
@@ -1,6 +1,7 @@
 <div class="palette">
     <div class="palette-search">
-        <i class="fa fa-search"></i><input type="text" placeholder="filter"><a href><i class="fa fa-remove"></i></a></input>
+        <i class="fa fa-search"></i><input type="text" placeholder="filter"><a href><i
+            class="fa fa-remove"></i></a></input>
     </div>
 
     <div class="text-center">
@@ -9,9 +10,13 @@
 
     <div class="palette-scroll">
         <div class="palette-category" ng-repeat="(category, flowNodeTypes) in typesByCategory">
-            <div class="palette-header"><i class="expanded fa fa-chevron-down"></i><span>{{category}}</span></div>
-            <div class="palette-content" id="palette-skynet">
-                <div ng-include="getFlowNodeTypeTemplateUrl(flowNodeType)" ng-repeat="flowNodeType in flowNodeTypes"></div>
+            <div class="palette-header" ng-click="hideCategory = !hideCategory">
+                <i class="expanded fa fa-chevron-down"></i>
+                <span>{{category}}</span>
+            </div>
+            <div ng-hide="hideCategory" class="palette-content">
+                <div ng-repeat="flowNodeType in flowNodeTypes"
+                     ng-include="getFlowNodeTypeTemplateUrl(flowNodeType)"></div>
             </div>
         </div>
     </div>
