--- a/public/angular/directives/design/palette/flow-node-templates/delay.html
+++ b/public/angular/directives/design/palette/flow-node-templates/delay.html
@@ -1,5 +1,3 @@
-<div class="palette_node" ng-repeat="flowNodeType in flowNodeTypes"
-     ng-style="{'background-image' : 'url(' + flowNodeType.ui.icon + ')',
-                                    'background-color' : flowNodeType.ui.color}">
+<div class="palette_node delay_node" style="background-color:#E6E0F8">
     <div class="palette_label">{{flowNodeType.name}}</div>
 </div>
