--- a/public/angular/directives/design/palette/flow-node-templates/default.html
+++ b/public/angular/directives/design/palette/flow-node-templates/default.html
@@ -1,3 +1,3 @@
-<div class="palette_node delay_node" ng-style="{'background-color': flowNodeType.color}">
+<div draggable="true" class="palette_node delay_node" ng-style="{'background-color': flowNodeType.color}">
     <div class="palette_label">{{flowNodeType.name}}</div>
 </div>
