--- a/public/angular/directives/design/flow-workspace/flow-workspace.html
+++ b/public/angular/directives/design/flow-workspace/flow-workspace.html
@@ -1,23 +1,21 @@
-<div class="palette">
-    <div class="palette-search">
-        <i class="fa fa-search"></i><input ng-model="paletteFilter" type="text" placeholder="filter"><a href><i
-            class="fa fa-remove"></i></a></input>
+<div id="workspace" class="workspace">
+    <div class="red-tabs-container">
+        <ul class="red-tabs" id="workspace-tabs"></ul>
+        <div class="red-add-tab"><a id="btn-workspace-add-tab" href><i class="fa fa-plus"></i></a></div>
     </div>
-
-    <div class="text-center">
-        <i class="palette-spinner fa fa-spin fa-refresh fa-2x"></i>
+    <div class="chart-zoom-controls" id="chart-zoom-controls">
+        <div class="btn-group">
+            <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
+            <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
+            <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
+        </div>
     </div>
-
-    <div class="palette-scroll">
-        <div class="palette-category" ng-repeat="(category, flowNodeTypes) in typesByCategory">
-            <div class="palette-header" ng-click="hideCategory = !hideCategory">
-                <i class="expanded fa fa-chevron-down"></i>
-                <span>{{category}}</span>
-            </div>
-            <div ng-hide="hideCategory" class="palette-content">
-                <div ng-repeat="flowNodeType in flowNodeTypes | filter: paletteFilter"
-                     ng-include="getFlowNodeTypeTemplateUrl(flowNodeType)"></div>
-            </div>
+    <div id="chart"></div>
+    <div id="workspace-toolbar">
+        <div class="btn-group">
+            <a class="btn btn-small" href><i class="fa fa-search-minus"></i></a>
+            <a class="btn btn-small" href><i class="fa fa-th"></i></a>
+            <a class="btn btn-small" href><i class="fa fa-search-plus"></i></a>
         </div>
     </div>
 </div>
