--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -41,32 +41,8 @@
 </div>
 
 <div id="main-container" class="main-container sidebar-closed">
-    <palette flow-node-types="flowNodeTypes"></palette>
-    <!-- /palette -->
-
-    <div id="workspace" class="workspace">
-        <div class="red-tabs-container">
-            <ul class="red-tabs" id="workspace-tabs"></ul>
-            <div class="red-add-tab"><a id="btn-workspace-add-tab" href><i class="fa fa-plus"></i></a></div>
-        </div>
-        <div class="chart-zoom-controls" id="chart-zoom-controls">
-            <div class="btn-group">
-                <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
-            </div>
-        </div>
-        <div id="chart"></div>
-        <div id="workspace-toolbar">
-            <div class="btn-group">
-                <a class="btn btn-small" href><i class="fa fa-search-minus"></i></a>
-                <a class="btn btn-small" href><i class="fa fa-th"></i></a>
-                <a class="btn btn-small" href><i class="fa fa-search-plus"></i></a>
-            </div>
-        </div>
-    </div>
-
-
+    <flow-palette flow-node-types="flowNodeTypes"></flow-palette>
+    <flow-workspace flows="flows"></flow-workspace>
     <div id="sidebar" class="edit-panel">
 
         <div class="node-editor" ng-hide="!editingNode">
@@ -78,7 +54,6 @@
             <button ng-click="updateNodeProperties()" class="btn btn-lg btn-primary save">Update Node</button>
         </div>
     </div>
-
     <div id="sidebar-separator"></div>
 </div>
 
