Removing "old" nodered scripts so I can tell what I'm affecting vs. what it's doing.

--- a/public/angular/directives/design/flow-workspace/flow-workspace.html
+++ b/public/angular/directives/design/flow-workspace/flow-workspace.html
@@ -10,7 +10,9 @@
             <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
         </div>
     </div>
-    <div id="chart"></div>
+    <div id="chart">
+        <svg width="5000" height="5000" pointer-events="all" style="cursor:crosshair;"></svg>
+    </div>
     <div id="workspace-toolbar">
         <div class="btn-group">
             <a class="btn btn-small" href><i class="fa fa-search-minus"></i></a>
