--- a/public/index.html
+++ b/public/index.html
@@ -165,16 +165,15 @@
 <script src="/assets/design/ba-tiny-pubsub.js"></script>
 <script src="/assets/design/orion/built-editor.min.js"></script>
 <script src="/assets/design/d3.v3.min.js"></script>
-<script src="/assets/design/red/main.js"></script>
-<script src="/assets/design/red/ui/state.js"></script>
-<script src="/assets/design/red/nodes.js"></script>
-<script src="/assets/design/red/history.js"></script>
-<script src="/assets/design/red/validators.js"></script>
-<script src="/assets/design/red/ui/keyboard.js"></script>
-<script src="/assets/design/red/ui/tabs.js"></script>
-<script src="/assets/design/red/ui/view.js"></script>
-<script src="/assets/design/red/ui/library.js"></script>
-<script src="/assets/design/red/ui/notifications.js"></script>
+<!--<script src="/assets/design/red/main.js"></script>-->
+<!--<script src="/assets/design/red/ui/state.js"></script>-->
+<!--<script src="/assets/design/red/nodes.js"></script>-->
+<!--<script src="/assets/design/red/history.js"></script>-->
+<!--<script src="/assets/design/red/ui/keyboard.js"></script>-->
+<!--<script src="/assets/design/red/ui/tabs.js"></script>-->
+<!--<script src="/assets/design/red/ui/view.js"></script>-->
+<!--<script src="/assets/design/red/ui/library.js"></script>-->
+<!--<script src="/assets/design/red/ui/notifications.js"></script>-->
 <!-- End Designer Dependencies -->
 </body>
 </html>
