workin' on making tabs actually relate to flows.

--- a/public/angular/directives/design/flow-workspace/flow-workspace.html
+++ b/public/angular/directives/design/flow-workspace/flow-workspace.html
@@ -1,8 +1,4 @@
 <div id="workspace" class="workspace">
-    <div class="red-tabs-container">
-        <ul class="red-tabs" id="workspace-tabs"></ul>
-        <div class="red-add-tab"><a id="btn-workspace-add-tab" href><i class="fa fa-plus"></i></a></div>
-    </div>
     <div class="chart-zoom-controls" id="chart-zoom-controls">
         <div class="btn-group">
             <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
@@ -10,7 +6,7 @@
             <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
         </div>
     </div>
-    <div id="chart">
+    <div class="chart">
         <svg width="5000" height="5000" pointer-events="all" style="cursor:crosshair;"></svg>
     </div>
     <div id="workspace-toolbar">
