--- a/public/pages/design2.html
+++ b/public/pages/design2.html
@@ -44,8 +44,12 @@
     <flow-palette flow-node-types="flowNodeTypes"></flow-palette>
     <div class="workspace-container">
         <div class="red-tabs-container">
-            <ul class="red-tabs" id="workspace-tabs"></ul>
-            <div class="red-add-tab"><a id="btn-workspace-add-tab" href><i class="fa fa-plus"></i></a></div>
+            <ul class="red-tabs" id="workspace-tabs">
+                <li ng-repeat="flow in flows">
+                    <span class="red-tab-label">{{flow.name}}</span>
+                </li>
+            </ul>
+            <div class="red-add-tab"><i class="fa fa-plus"></i></div>
         </div>
         <flow-workspace flows="flows"></flow-workspace>
     </div>
