--- a/public/angular/directives/flow/flow-palette/flow-palette.html
+++ b/public/angular/directives/flow/flow-palette/flow-palette.html
@@ -10,7 +10,7 @@
                 <span>{{category}}</span>
             </div>
             <div ng-hide="hideCategory" class="palette-content">
-                <div class="palette_node" draggable="true" ng-repeat="flowNodeType in flowNodeTypes | filter: paletteFilter"
+                <div ondragstart="console.log('test')" class="palette_node" draggable="true" ng-repeat="flowNodeType in flowNodeTypes | filter: paletteFilter"
                      ng-include="getFlowNodeTypeTemplateUrl(flowNodeType)"></div>
             </div>
         </div>
