--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -42,7 +42,7 @@
     </div>
 
     <div id="main-container" class="main-container sidebar-closed">
-        <flow-palette flow-node-types="flowNodeTypes"></flow-palette>
+        <flow-node-palette flow-node-types="flowNodeTypes"></flow-node-palette>
         <div class="workspace-container">
             <div class="red-tabs-container">
                 <ul class="red-tabs" id="workspace-tabs">
