Use gulp to concatinate JS. From 125 requests to 58

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,8 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="/assets/javascripts/dist/application.js"></script>
+<!--
 <script src="angular/app.js"></script>
 <script src="angular/services/auth.js"></script>
 <script src="angular/services/channel.js"></script>
@@ -157,7 +159,8 @@
 <script src="angular/controllers/services.js"></script>
 <script src="angular/controllers/signup.js"></script>
 <script src="angular/controllers/design2.js"></script>
-<!-- endbuild -->
+ -->
+ <!-- endbuild -->
 
 <!-- Designer Dependencies -->
 <script src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
