--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -175,6 +175,7 @@ COMMENTED OUT FOR WHITESPACE
             </div>
         </div><!-- END OF GRAPH ROW -->
     </div>
+</div>
 </tab>
 	<tab heading="Search">
 	<div class="container-fluid">
