Scatter Chart Work. Need to update the directive to graph properly, but the data is ready

--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -138,7 +138,7 @@ COMMENTED OUT FOR WHITESPACE
             </form>
         </div>
         <!-- end Choices Div Row -->
-        <div class="row">
+        <div class="row" style='height:400px'>
             <div class="col-sm-8 dashboard-panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Event Counts over Time</h3>
@@ -155,8 +155,8 @@ COMMENTED OUT FOR WHITESPACE
                     </div>
                 </div>
             </div>
-        </div><!-- END OF GRAPH ROW -->
-        <div class="row">
+        <!--</div><!-- END OF GRAPH ROW -
+        <div class="row">-->
             <div class="col-sm-8 dashboard-panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Event Counts over Time</h3>
