--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,8 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<!-- <script src="/assets/javascripts/dist/application.js"></script> -->
+<script src="/assets/javascripts/dist/application.js"></script>
+<!--
 <script src="angular/app.js"></script>
 <script src="angular/services/auth.js"></script>
 <script src="angular/services/channel.js"></script>
@@ -158,6 +159,7 @@
 <script src="angular/controllers/services.js"></script>
 <script src="angular/controllers/signup.js"></script>
 <script src="angular/controllers/design2.js"></script>
+-->
  <!-- endbuild -->
 
 <!-- Designer Dependencies -->
