--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,3 +1,4 @@
 <div class="flow-editor">
+    {{flow | json}}
     <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1" width="5000" height="5000" pointer-events="all"></svg>
 </div>
