Add click events that propagate from D3, add flow node editor controller

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -53,7 +53,7 @@
                 </ul>
                 <div class="red-add-tab" ng-click="addFlow()"><i class="fa fa-plus"></i></div>
             </div>
-            <flow-editor flow="activeFlow"></flow-editor>
+            <flow-editor flow="activeFlow" selected-node="selectedNode"></flow-editor>
         </div>
         <div id="sidebar" class="edit-panel">
 
