--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -61,7 +61,7 @@
                 <div class="panel-heading">Edit Node</div>
                 <div class="panel-body">
                     <form ng-submit="updateNode()" class="form">
-                        <div ng-include="flowEditor.flowNodeType.templatePath"></div>
+                        <div ng-include="flowEditor.flowNodeType.formTemplatePath"></div>
                         <button type="submit" class="btn btn-lg btn-block btn-primary">Update Node</button>
                     </form>
                 </div>
