Add function node

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,8 @@
 <script src="lib/elasticsearch/elasticsearch.angular.js"></script>
 <script src="lib/smoothie/smoothie.js"></script>
 <script src="lib/ng-table/ng-table.js"></script>
+<script src="lib/angular-ui-ace/ui-ace.js"></script>
+<script src="lib/ace-builds/src-noconflict/ace.js"></script>
 <!-- <script src="lib/jpreloader/js/jpreloader.js"></script> -->
 <!-- <script src="assets/javascripts/loop.js"></script> -->
 <!-- endbuild -->
